[package]
name = "cancel-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-http = "3.2"
actix-rt = "2.6"
actix-web = "4.2" 
futures = "0.3"
futures-util = "0.3"
nix = "0.25.0"
reqwest = "0.11"
tokio = "1.15"